force-app/main/default/objects/Claim__c/fields/AssessorContact__c.field-meta.xml
<CustomField>
    <fullName>AssessorContact__c</fullName>
    <description>Field to capture AssessorContact from insight</description>
    <label>Assessor Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>