force-app/main/default/objects/Claim__c/fields/AssessorEmail__c.field-meta.xml
<CustomField>
    <fullName>AssessorEmail__c</fullName>
    <description>Field to capture AssessorEmail from insight</description>
    <label>Assessor Email</label>
    <type>Email</type>
</CustomField>