force-app/main/default/objects/Claim__c/fields/AssessorPhone__c.field-meta.xml
<CustomField>
    <fullName>AssessorPhone__c</fullName>
    <description>Field to capture AssessorPhone from insight</description>
    <label>Assessor Phone</label>
    <type>Phone</type>
</CustomField>