force-app/main/default/objects/Claim__c/fields/BranchId__c.field-meta.xml
<CustomField>
    <fullName>BranchId__c</fullName>
    <description>Field to capture BranchId from insight</description>
    <label>Branch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>