force-app/main/default/objects/Claim__c/fields/CauseName__c.field-meta.xml
<CustomField>
    <fullName>CauseName__c</fullName>
    <description>Field to capture CauseName from insight</description>
    <label>Cause Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>