force-app/main/default/objects/Claim__c/fields/CauseOfLoss__c.field-meta.xml
<CustomField>
    <fullName>CauseOfLoss__c</fullName>
    <description>Field to capture CauseOfLoss from insight</description>
    <label>Cause Of Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>