force-app/main/default/objects/Claim__c/fields/Claim_ID__c.field-meta.xml
<CustomField>
    <fullName>Claim_ID__c</fullName>
    <description>Field to capture Claim Id from Insight</description>
    <externalId>true</externalId>
    <label>Claim ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>