force-app/main/default/objects/Claim__c/fields/Client_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Client_Mobile__c</fullName>
    <formula>Client__r.MobilePhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Mobile</label>
    <type>Text</type>
</CustomField>