force-app/main/default/objects/Claim__c/fields/Client_Ref__c.field-meta.xml
<CustomField>
    <fullName>Client_Ref__c</fullName>
    <formula>Client__r.Reference_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Ref</label>
    <type>Text</type>
</CustomField>