force-app/main/default/objects/Claim__c/fields/Client_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Client_Telephone__c</fullName>
    <formula>Client__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Telephone</label>
    <type>Text</type>
</CustomField>