force-app/main/default/objects/Claim__c/fields/ClientContact__c.field-meta.xml
<CustomField>
    <fullName>ClientContact__c</fullName>
    <description>Field to capture BranchId from insight</description>
    <label>Client Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>