force-app/main/default/objects/Claim__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Field to capture ClientId from insight</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>