force-app/main/default/objects/Claim__c/fields/CreatedWhen__c.field-meta.xml
<CustomField>
    <fullName>CreatedWhen__c</fullName>
    <description>Field to capture CreatedWhen from insight</description>
    <label>Created When</label>
    <type>DateTime</type>
</CustomField>