force-app/main/default/objects/Claim__c/fields/CreatedWho__c.field-meta.xml
<CustomField>
    <fullName>CreatedWho__c</fullName>
    <description>Field to capture Created Who from insight</description>
    <label>Created Who</label>
    <length>255</length>
    <type>Text</type>
</CustomField>