force-app/main/default/objects/Claim__c/fields/EstimateOfLossAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimateOfLossAmount__c</fullName>
    <description>Field to capture EstimateOfLossAmount from insight</description>
    <label>Estimate Of Loss Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>