force-app/main/default/objects/Claim__c/fields/Excess__c.field-meta.xml
<CustomField>
    <fullName>Excess__c</fullName>
    <description>Field to capture Excess from insight</description>
    <label>Excess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>