force-app/main/default/objects/Claim__c/fields/Insurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Name__c</fullName>
    <formula>TEXT(Policy__r.Insurer_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurer Name</label>
    <type>Text</type>
</CustomField>