force-app/main/default/objects/Claim__c/fields/InsurerAdvisedDate__c.field-meta.xml
<CustomField>
    <fullName>InsurerAdvisedDate__c</fullName>
    <description>Field to capture InsurerAdvisedDate from insight</description>
    <label>Insurer Advised Date</label>
    <type>Date</type>
</CustomField>