force-app/main/default/objects/Claim__c/fields/InsurerClaimsRef__c.field-meta.xml
<CustomField>
    <fullName>InsurerClaimsRef__c</fullName>
    <description>Field to capture InsurerClaimsRef from insight</description>
    <label>Insurer Claims Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>