force-app/main/default/objects/Claim__c/fields/InsurerContact__c.field-meta.xml
<CustomField>
    <fullName>InsurerContact__c</fullName>
    <description>Field to capture InsurerContact from insight</description>
    <label>Insurer Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>