force-app/main/default/objects/Claim__c/fields/InsurerEmail__c.field-meta.xml
<CustomField>
    <fullName>InsurerEmail__c</fullName>
    <description>Field to capture InsurerEmail from insight</description>
    <label>Insurer Email</label>
    <type>Email</type>
</CustomField>