force-app/main/default/objects/Claim__c/fields/InsurerId__c.field-meta.xml
<CustomField>
    <fullName>InsurerId__c</fullName>
    <description>Field to capture InsurerId from insight</description>
    <label>Insurer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>