force-app/main/default/objects/Claim__c/fields/InsurerPhone__c.field-meta.xml
<CustomField>
    <fullName>InsurerPhone__c</fullName>
    <description>Field to capture InsurerPhone from insight</description>
    <label>Insurer Phone</label>
    <type>Phone</type>
</CustomField>