force-app/main/default/objects/Claim__c/fields/InsurerRef__c.field-meta.xml
<CustomField>
    <fullName>InsurerRef__c</fullName>
    <description>Field to capture InsurerRef from insight</description>
    <label>Insurer Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>