force-app/main/default/objects/Claim__c/fields/InsurerTradingAs__c.field-meta.xml
<CustomField>
    <fullName>InsurerTradingAs__c</fullName>
    <description>Field to capture InsurerTradingAs from insight</description>
    <label>Insurer Trading As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>