force-app/main/default/objects/Claim__c/fields/IsAssessorAdvised__c.field-meta.xml
<CustomField>
    <fullName>IsAssessorAdvised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture IsAssessorAdvised from insight</description>
    <label>Is Assessor Advised</label>
    <type>Checkbox</type>
</CustomField>