force-app/main/default/objects/Claim__c/fields/IsAssessorApproved__c.field-meta.xml
<CustomField>
    <fullName>IsAssessorApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture IsAssessorApproved from insight</description>
    <label>Is Assessor Approved</label>
    <type>Checkbox</type>
</CustomField>