force-app/main/default/objects/Claim__c/fields/IsAssessorRequired__c.field-meta.xml
<CustomField>
    <fullName>IsAssessorRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture IsAssessorRequired from insight</description>
    <label>Is Assessor Required</label>
    <type>Checkbox</type>
</CustomField>