force-app/main/default/objects/Claim__c/fields/IsInsurerAdvised__c.field-meta.xml
<CustomField>
    <fullName>IsInsurerAdvised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture IsInsurerAdvised from insight</description>
    <label>Is Insurer Advised</label>
    <type>Checkbox</type>
</CustomField>