force-app/main/default/objects/Claim__c/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture IsOpen from insight</description>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>