force-app/main/default/objects/Claim__c/fields/LossDate__c.field-meta.xml
<CustomField>
    <fullName>LossDate__c</fullName>
    <description>Field to capture LossDate from insight</description>
    <label>Loss Date</label>
    <type>Date</type>
</CustomField>