force-app/main/default/objects/Claim__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <description>Field to capture ParentId from insight</description>
    <label>ParentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>