force-app/main/default/objects/Claim__c/fields/PolicyDescription__c.field-meta.xml
<CustomField>
    <fullName>PolicyDescription__c</fullName>
    <description>Field to capture PolicyDescription from insight</description>
    <label>Policy Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>