force-app/main/default/objects/Claim__c/fields/PolicyTransactionId__c.field-meta.xml
<CustomField>
    <fullName>PolicyTransactionId__c</fullName>
    <description>Field to capture PolicyTransactionId from insight</description>
    <label>Policy Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>