force-app/main/default/objects/Claim__c/fields/PolicyTransactionTypeName__c.field-meta.xml
<CustomField>
    <fullName>PolicyTransactionTypeName__c</fullName>
    <description>Field to capture PolicyTransactionTypeName from insight</description>
    <label>Policy Transaction Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>