force-app/main/default/objects/Claim__c/fields/ReportedDate__c.field-meta.xml
<CustomField>
    <fullName>ReportedDate__c</fullName>
    <description>Field to capture ReportedDate from insight</description>
    <label>Reported Date</label>
    <type>Date</type>
</CustomField>