force-app/main/default/objects/Claim__c/fields/ResultName__c.field-meta.xml
<CustomField>
    <fullName>ResultName__c</fullName>
    <description>Field to capture ResultName from insight</description>
    <label>Result Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>