force-app/main/default/objects/Claim__c/fields/ResultOfLoss__c.field-meta.xml
<CustomField>
    <fullName>ResultOfLoss__c</fullName>
    <description>Field to capture ResultOfLoss from insight</description>
    <label>Result Of Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>