force-app/main/default/objects/Claim__c/fields/ReviewAction__c.field-meta.xml
<CustomField>
    <fullName>ReviewAction__c</fullName>
    <description>Field to capture ReviewAction from insight</description>
    <label>Review Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>