force-app/main/default/objects/Claim__c/fields/ReviewDate__c.field-meta.xml
<CustomField>
    <fullName>ReviewDate__c</fullName>
    <description>Field to capture ReviewDate from insight</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>