force-app/main/default/objects/Claim__c/fields/SitRegNo__c.field-meta.xml
<CustomField>
    <fullName>SitRegNo__c</fullName>
    <description>Field to capture SitRegNo from insight</description>
    <label>Sit Reg No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>