force-app/main/default/objects/Claim__c/fields/StatusId__c.field-meta.xml
<CustomField>
    <fullName>StatusId__c</fullName>
    <description>Field to capture StatusId from insight</description>
    <label>Status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>