force-app/main/default/objects/Claim__c/fields/StatusName__c.field-meta.xml
<CustomField>
    <fullName>StatusName__c</fullName>
    <description>Field to capture StatusName from insight</description>
    <label>Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>