force-app/main/default/objects/Claim__c/fields/SubjectId__c.field-meta.xml
<CustomField>
    <fullName>SubjectId__c</fullName>
    <description>Field to capture SubjectId from insight</description>
    <label>Subject Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>