force-app/main/default/objects/Claim__c/fields/SubjectName__c.field-meta.xml
<CustomField>
    <fullName>SubjectName__c</fullName>
    <description>Field to capture SubjectName from insight</description>
    <label>Subject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>