force-app/main/default/objects/Claim__c/fields/SubjectOfLoss__c.field-meta.xml
<CustomField>
    <fullName>SubjectOfLoss__c</fullName>
    <description>Field to capture SubjectOfLoss from insight</description>
    <label>Subject Of Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>