force-app/main/default/objects/Claim__c/fields/UpdatedWhen__c.field-meta.xml
<CustomField>
    <fullName>UpdatedWhen__c</fullName>
    <description>Field to capture UpdatedWhen from insight</description>
    <label>Updated When</label>
    <type>DateTime</type>
</CustomField>