force-app/main/default/objects/Claim__c/fields/UpdatedWho__c.field-meta.xml
<CustomField>
    <fullName>UpdatedWho__c</fullName>
    <description>Field to capture UpdatedWho from insight</description>
    <label>Updated Who</label>
    <length>255</length>
    <type>Text</type>
</CustomField>